samples/_failures_safe/1761520204_14c956_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_75363570.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_75363570.c:167:31: error: expected ‘;’ at end of input
  167 |         case TOKEN_EOF: printf
      |                               ^
      |                               ;
./samples/SAFE/__tmp_75363570.c:167:9: error: expected declaration or statement at end of input
  167 |         case TOKEN_EOF: printf
      |         ^~~~
./samples/SAFE/__tmp_75363570.c:167:9: error: expected declaration or statement at end of input
